Fix carousel image stretching with align-items flex-start

--- a/src/components/ProjectOverview.css
+++ b/src/components/ProjectOverview.css
@@ -107,6 +107,7 @@
 
 .po-carousel-track {
   display: flex;
+  align-items: flex-start;
   will-change: transform;
 }
 
